--- a/src/template/common/head.ejs
+++ b/src/template/common/head.ejs
@@ -1,13 +1,13 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="<%= description %>" />
 
 <!-- open graph -->
-<meta property="og:title" content="<%= title %>" />
 <meta property="og:type" content="website" />
-<meta property="og:description" content="<%= description %>" />
 <meta property="og:image" content="/logo.png" />
 
-<title><%= title %></title>
 <link rel="shortcut icon" href="/logo.png" />
 <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+
+
+<link rel="preload" href="<%= titleFontPath %>" as="font" crossOrigin="anonymous" />
+<link rel="preload" href="<%= commonFontPath %>" as="font" crossOrigin="anonymous" />
