--- a/src/template/common/head.ejs
+++ b/src/template/common/head.ejs
@@ -6,8 +6,8 @@
 <meta property="og:image" content="/logo.png" />
 
 <link rel="shortcut icon" href="/logo.png" />
-<link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+<link rel="sitemap" type="application/xml" href="<%= config.publicPath %>/sitemap.xml" />
 
 
-<link rel="preload" href="<%= titleFontPath %>" as="font" crossOrigin="anonymous" />
-<link rel="preload" href="<%= commonFontPath %>" as="font" crossOrigin="anonymous" />
+<link rel="preload" href="<%= config.publicPath %>/<%= titleFontPath %>" as="font" crossOrigin="anonymous" />
+<link rel="preload" href="<%= config.publicPath %>/<%= commonFontPath %>" as="font" crossOrigin="anonymous" />
