--- a/src/template/index.ejs
+++ b/src/template/index.ejs
@@ -9,11 +9,11 @@
   <meta property="og:description" content="<%= config.description %>" />
   <title><%= config.title %> - <%= config.description %></title>
 
-  <link rel="preload" href="<%= allArticleTitleFontPath %>" as="font" crossOrigin="anonymous" />
+  <link rel="preload" href="<%= config.publicPath %>/<%= allArticleTitleFontPath %>" as="font" crossOrigin="anonymous" />
   <style>
     @font-face {
       font-family: article_title;
-      src: url(<%= allArticleTitleFontPath %>);
+      src: url(<%= config.publicPath %>/<%= allArticleTitleFontPath %>);
     }
 
     .article-list {
@@ -34,16 +34,13 @@
       color: var(--primary-color);
       font-size: 18px;
       font-family: article_title;
-      border-width: 0 0 1px 0;
-      border-style: solid;
-      border-color: transparent;
-    }
-    .article-title:hover {
-      border-color: var(--primary-color);
     }
     .article-title > a {
       text-decoration: none;
       color: inherit;
+    }
+    .article-title > a:hover {
+      text-decoration: underline;
     }
     .article-time {
       display: inline-block;
@@ -60,7 +57,7 @@
     <% articleList.forEach(article => { %>
       <li class="article-item">
         <h2 class="article-title">
-          <a href="/<%= article.id %>">
+          <a href="<%= config.publicPath %>/<%= article.id %>">
             <%= article.title %>
           </a>
         </h2>
