update content style

--- a/src/template/article/article_content.ejs
+++ b/src/template/article/article_content.ejs
@@ -165,6 +165,7 @@
     display: block;
     max-width: 100%;
     margin: 0 auto;
+    border-radius: var(--border-radius);
   }
 
   .figure-iframe {
