--- a/src/template/article/edit_in_github.ejs
+++ b/src/template/article/edit_in_github.ejs
@@ -15,7 +15,7 @@
 </style>
 
 <div class="edit-in-github">
-  <a href="https://github.com/mebtte/article/edit/master/articles/<%= id %>/index.md">
+  <a href="<%= config.githubRepository %>/edit/master/articles/<%= id %>/index.md">
     在 Github 编辑这边文章 →
   </a>
 </div>
