--- a/src/template/common/head.ejs
+++ b/src/template/common/head.ejs
@@ -1,5 +1,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="author" content="<%= config.author %>" />
+<meta name="keywords" content="<%= config.keywords.join(',') %>" />
 
 <!-- open graph -->
 <meta property="og:type" content="website" />
