--- a/src/template/common/header.ejs
+++ b/src/template/common/header.ejs
@@ -77,7 +77,7 @@
     <img class="page-header_icon page-header_icon__dark-theme" src="/rss_dark.png" alt="rss" />
     <img class="page-header_icon page-header_icon__light-theme" src="/rss_light.png" alt="rss" />
   </a>
-  <a href="https://github.com/mebtte/article">
+  <a href="<%= config.githubRepository %>">
     <img class="page-header_icon page-header_icon__dark-theme" src="/github_dark.png" alt="github" />
     <img class="page-header_icon page-header_icon__light-theme" src="/github_light.png" alt="github" />
   </a>
