--- a/src/template/article/article_content.ejs
+++ b/src/template/article/article_content.ejs
@@ -61,14 +61,14 @@
     margin: 15px auto !important;
     font-size: 14px !important;
     box-sizing: border-box;
-    padding: 20px !important;
     border-radius: var(--border-radius) !important;
-    overflow: visible !important;
     tab-size: 2 !important;
+    padding: 0 !important;
   }
 
   article pre code {
     display: block;
+    margin: 20px 30px !important;
     overflow: auto !important;
     font-size: inherit !important;
   }
@@ -89,14 +89,18 @@
     color: var(--secondary-color);
   }
 
-  article table {
-    display: block;
+  .table-container {
     max-width: 840px;
+    padding: 0 30px;
     margin: 15px auto;
+  }
+
+  .table-container table {
+    max-width: 100%;
     border-collapse: collapse;
   }
 
-  article table td {
+  .table-container td {
     font-size: 14px;
     color: var(--normal-color);
     border: 1px solid var(--tertiary-color);
