调整底部样式

--- a/src/template/article/index.ejs
+++ b/src/template/article/index.ejs
@@ -29,7 +29,7 @@
     <%- include('./article_content.ejs') %>
     <%- updates.length ? include('./article_updates.ejs') : null %>
   </article>
-  <%- include('./edit_in_github.ejs') %>
+  <%- include('./article_action.ejs') %>
   <%- include('../common/footer.ejs') %>
 
   <script src="/prism.js"></script>
