解决code标签代码解析不正确的问题

--- a/src/template/article/article_action.ejs
+++ b/src/template/article/article_action.ejs
@@ -14,9 +14,9 @@
 </style>
 
 <p class="article-action">
-  本文使用
+  使用
   <a href="<%= config.githubRepository %>/issues">Issues</a>
-  讨论或直接在
+  讨论或在
   <a href="<%= config.githubRepository %>/edit/master/articles/<%= id %>/index.md">Github</a>
   编辑.
 </p>
