--- a/src/template/article/article_action.ejs
+++ b/src/template/article/article_action.ejs
@@ -1,7 +1,7 @@
 
 <style>
   .article-action {
-    max-width: 840px;
+    max-width: var(--content-max-width);
     margin: 40px auto;
     padding: 0 30px;
     font-family: common_font;
