--- a/src/template/index.ejs
+++ b/src/template/index.ejs
@@ -15,7 +15,7 @@
     }
 
     .article-list {
-      max-width: 840px;
+      max-width: var(--content-max-width);
       margin: 40px auto;
       padding: 0 30px;
     }
