--- a/src/template/article/article_header.ejs
+++ b/src/template/article/article_header.ejs
@@ -1,6 +1,6 @@
 <style>
 .article-header {
-  max-width: 840px;
+  max-width: var(--content-max-width);
   margin: 40px auto;
   padding: 0 30px;
 }
