--- a/src/template/common/header.ejs
+++ b/src/template/common/header.ejs
@@ -5,7 +5,7 @@
   }
 
   .page-header {
-    max-width: 840px;
+    max-width: var(--content-max-width);
     margin: 40px auto;
     padding: 0 30px;
     display: flex;
