--- a/src/template/article/article_action.ejs
+++ b/src/template/article/article_action.ejs
@@ -15,8 +15,8 @@
 
 <p class="article-action">
   使用
-  <a href="<%= config.githubRepository %>/issues">Issues</a>
+  <a href="<%= config.github_repository %>/issues">Issues</a>
   讨论或在
-  <a href="<%= config.githubRepository %>/edit/master/articles/<%= id %>/index.md">Github</a>
+  <a href="<%= config.github_repository %>/edit/master/articles/<%= id %>/index.md">Github</a>
   编辑.
 </p>
