--- a/src/template/article/article_header.ejs
+++ b/src/template/article/article_header.ejs
@@ -27,7 +27,7 @@
 
 <section class="article-header">
   <h1 class="article-title">
-    <a href="<%= config.publicPath %>/<%= id %>"><%= title %></a>
+    <a href="<%= config.public_path %>/<%= id %>"><%= title %></a>
   </h1>
   <time class="article-create-time"><%= createTime %></time>
 </section>
