--- a/src/template/common/footer.ejs
+++ b/src/template/common/footer.ejs
@@ -19,6 +19,6 @@
 </style>
 
 <footer class="page-footer">
-  <a href="<%= config.githubRepository %>/blob/master/LICENSE">&copy;</a> <%= new Date().getFullYear() %>
-  <a href="<%= config.authorSite %>"><%= config.author.toUpperCase() %></a>
+  <a href="<%= config.github_repository %>/blob/master/LICENSE">&copy;</a> <%= new Date().getFullYear() %>
+  <a href="<%= config.author_site %>"><%= config.author.toUpperCase() %></a>
 </footer>
