--- a/src/template/index.ejs
+++ b/src/template/index.ejs
@@ -7,11 +7,11 @@
 
   <title><%= config.title %> - <%= config.description %></title>
 
-  <link rel="preload" href="<%= config.publicPath %>/<%= allArticleTitleFontPath %>" as="font" crossOrigin="anonymous" />
+  <link rel="preload" href="<%= config.public_path %>/<%= allArticleTitleFontPath %>" as="font" crossOrigin="anonymous" />
   <style>
     @font-face {
       font-family: article_title;
-      src: url(<%= config.publicPath %>/<%= allArticleTitleFontPath %>);
+      src: url(<%= config.public_path %>/<%= allArticleTitleFontPath %>);
     }
 
     .article-list {
@@ -55,7 +55,7 @@
     <% articleList.forEach(article => { %>
       <li class="article-item">
         <h2 class="article-title">
-          <a href="<%= config.publicPath %>/<%= article.id %>"><%= article.title %></a>
+          <a href="<%= config.public_path %>/<%= article.id %>"><%= article.title %></a>
         </h2>
         <time class="article-time"><%= article.createTime %></time>
       </li>
