--- a/src/template/article/article_header.ejs
+++ b/src/template/article/article_header.ejs
@@ -18,7 +18,7 @@
   color: inherit;
 }
 
-.article-create-time {
+.article-publish-time {
   color: var(--secondary-color);
   font-size: 14px;
   font-family: common_font;
@@ -29,5 +29,5 @@
   <h1 class="article-title">
     <a href="<%= config.public_path %>/<%= id %>"><%= title %></a>
   </h1>
-  <time class="article-create-time"><%= createTime %></time>
+  <time class="article-publish-time"><%= publishTime %></time>
 </section>
