--- a/src/template/rss.ejs
+++ b/src/template/rss.ejs
@@ -14,14 +14,14 @@
     </description>
     <link><%= config.site %><%= config.public_path %></link>
     <lastBuildDate><%= new Date().toISOString() %></lastBuildDate>
-    <% articleList.forEach(({ id, title, createTime }) => { %>
+    <% articleList.forEach(({ id, title, publishTime }) => { %>
       <item>
         <title>
           <![CDATA[<%= title %>]]>
         </title>
         <link><%= config.site %><%= config.public_path %>/<%= id %></link>
         <guid isPermaLink="false"><%= id %></guid>
-        <pubDate><%= new Date(createTime).toISOString() %></pubDate>
+        <pubDate><%= new Date(publishTime).toISOString() %></pubDate>
       </item>
     <% }) %>
   </channel>
