--- a/src/template/rss.ejs
+++ b/src/template/rss.ejs
@@ -14,11 +14,14 @@
     </description>
     <link><%= config.site %><%= config.public_path %></link>
     <lastBuildDate><%= new Date().toISOString() %></lastBuildDate>
-    <% articleList.forEach(({ id, title, publishTime }) => { %>
+    <% articleList.forEach(({ id, title, description, publishTime }) => { %>
       <item>
         <title>
           <![CDATA[<%= title %>]]>
         </title>
+        <description>
+          <![CDATA[<%= description %>]]>
+        </description>
         <link><%= config.site %><%= config.public_path %>/<%= id %></link>
         <guid isPermaLink="false"><%= id %></guid>
         <pubDate><%= new Date(publishTime).toISOString() %></pubDate>
