--- a/src/template/article/article_content.ejs
+++ b/src/template/article/article_content.ejs
@@ -200,7 +200,7 @@
     max-width: var(--content-max-width);
     margin: 0 auto;
     height: 640px;
-    border: none;
+    border: 1px solid var(--tertiary-color);
     border-radius: var(--border-radius);
   }
 </style>
