migration_of_my_blog_structure

--- a/src/template/article/article_header.ejs
+++ b/src/template/article/article_header.ejs
@@ -6,7 +6,7 @@
 }
 
 .article-title {
-  color: var(--normal-color);
+  color: var(--primary-color);
   font-size: 32px;
   margin: 0;
   padding: 0;
