--- a/src/template/common/header.ejs
+++ b/src/template/common/header.ejs
@@ -20,12 +20,8 @@
     margin: 0;
   }
 
-  h1.page-header_title  {
+  .page-header_title  {
     color: var(--normal-color);
-  }
-
-  h2.page-header_title {
-    color: var(--primary-color);
   }
 
   .page-header_title > a {
