add watch script description

--- a/src/template/article/article_action.ejs
+++ b/src/template/article/article_action.ejs
@@ -15,7 +15,7 @@
 
 <p class="article-action">
   使用
-  <a href="<%= config.github_repository %>/issues">Issues</a>
+  <a href="<%= config.github_repository %>/discussions">Discussions</a>
   讨论或在
   <a href="<%= config.github_repository %>/edit/master/articles/<%= id %>/index.md">Github</a>
   编辑.
