移除暗色模式

--- a/src/template/article/index.ejs
+++ b/src/template/article/index.ejs
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="/prism.css" />
 </head>
 
-<body class="light-theme">
+<body>
   <%- include('../common/header.ejs', { reverse: true }) %>
   <article>
     <%- include('./article_header.ejs') %>
