--- a/src/template/index.ejs
+++ b/src/template/index.ejs
@@ -50,7 +50,7 @@
   </style>
 </head>
 
-<body class="light-theme">
+<body>
   <%- include('common/header.ejs', { reverse: false }) %>
   <ul class="article-list">
     <% articleList.forEach(article => { %>
