--- a/src/template/common/header.ejs
+++ b/src/template/common/header.ejs
@@ -29,14 +29,6 @@
     text-decoration: none;
   }
 
-  .theme-changer {
-    background-color: transparent;
-    padding: 0;
-    margin: 0;
-    outline: none;
-    border: none;
-  }
-
   .page-header_icon {
     display: block;
     margin-left: 16px;
@@ -44,14 +36,6 @@
     width: 20px;
     height: 20px;
     cursor: pointer;
-  }
-
-  .dark-theme .page-header_icon__light-theme {
-    display: none;
-  }
-
-  .light-theme .page-header_icon__dark-theme {
-    display: none;
   }
 </style>
 
@@ -65,33 +49,10 @@
       <a href="<%= config.public_path %>/"><%= config.title %></a>
     </h1>
   <% } %>
-  <button class="theme-changer" type="button">
-    <img class="page-header_icon page-header_icon__dark-theme" src="/sun.png" alt="light theme" />
-    <img class="page-header_icon page-header_icon__light-theme" src="/moon.png" alt="dark theme" />
-  </button>
   <a href="<%= config.public_path %>/rss.xml">
-    <img class="page-header_icon page-header_icon__dark-theme" src="/rss_dark.png" alt="rss" />
-    <img class="page-header_icon page-header_icon__light-theme" src="/rss_light.png" alt="rss" />
+    <img class="page-header_icon" src="/rss.png" alt="rss" />
   </a>
   <a href="<%= config.github_repository %>">
-    <img class="page-header_icon page-header_icon__dark-theme" src="/github_dark.png" alt="github" />
-    <img class="page-header_icon page-header_icon__light-theme" src="/github_light.png" alt="github" />
+    <img class="page-header_icon" src="/github.png" alt="github" />
   </a>
 </header>
-
-<script>
-  (() => {
-    const themeChanger = document.querySelector('.theme-changer');
-    themeChanger.addEventListener('click', () => {
-      if (document.body.classList.contains('dark-theme')) {
-        document.body.classList.remove('dark-theme');
-        document.body.classList.add('light-theme');
-        window.localStorage.removeItem('dark_theme');
-      } else {
-        document.body.classList.remove('light-theme');
-        document.body.classList.add('dark-theme');
-        window.localStorage.setItem('dark_theme', '1');
-      }
-    });
-  })()
-</script>
