--- a/src/template/article/article_content.ejs
+++ b/src/template/article/article_content.ejs
@@ -54,7 +54,7 @@
     color: var(--normal-color);
   }
 
-  article p code {
+  article p code, article ul code {
     padding: 0 4px;
     border-radius: var(--border-radius);
     background: rgba(237, 106, 94, 0.3);
@@ -202,6 +202,11 @@
     height: 640px;
     border: 1px solid var(--tertiary-color);
     border-radius: var(--border-radius);
+  }
+
+  strong {
+    font-weight: normal;
+    text-decoration: underline;
   }
 </style>
 
