--- a/src/template/common/footer.ejs
+++ b/src/template/common/footer.ejs
@@ -1,5 +1,5 @@
 <style>
-.page-footer{
+.page-footer {
   font-size: 12px;
   max-width: var(--content-max-width);
   margin: 40px auto;
@@ -13,6 +13,10 @@
   color: inherit;
 }
 
+.page-footer > .author {
+  text-decoration: underline;
+}
+
 .page-footer > a:hover {
   color: var(--primary-color);
 }
@@ -20,5 +24,5 @@
 
 <footer class="page-footer">
   <a href="<%= config.github_repository %>/blob/master/LICENSE">&copy;</a> <%= new Date().getFullYear() %>
-  <a href="<%= config.author_site %>"><%= config.author.toUpperCase() %></a>
+  <a class="author" href="<%= config.author_site %>"><%= config.author.toUpperCase() %></a>
 </footer>
