--- a/src/template/common/header.ejs
+++ b/src/template/common/header.ejs
@@ -15,7 +15,7 @@
   .page-header_title {
     flex: 1;
     min-width: 0;
-    font-size: 64px;
+    font-size: min(9vw, 56px);
     font-family: title_font;
     margin: 0;
   }
