--- a/src/template/index.ejs
+++ b/src/template/index.ejs
@@ -5,7 +5,7 @@
   <%- include('common/head.ejs') %>
   <%- include('common/global_style.ejs') %>
 
-  <title><%= config.title %> - <%= config.description %></title>
+  <title><%= config.title %></title>
   <meta name="description" content="<%= config.description %>" />
 
   <link rel="preload" href="<%= config.public_path %>/<%= allArticleTitleFontPath %>" as="font" crossOrigin="anonymous" />
