--- a/src/template/common/head.ejs
+++ b/src/template/common/head.ejs
@@ -3,17 +3,15 @@
 <meta name="author" content="<%= config.author %>" />
 <meta name="keywords" content="<%= config.keywords.join(',') %>" />
 
-<% if (config.ga_measurement_id) { %>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=<%= config.ga_measurement_id %>"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CESZTRKM96"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', '<%= config.ga_measurement_id %>');
-  </script>
-<% } %>
+  gtag('config', 'G-CESZTRKM96');
+</script>
 
 <!-- open graph -->
 <meta property="og:type" content="website" />
