--- a/src/template/common/head.ejs
+++ b/src/template/common/head.ejs
@@ -9,9 +9,11 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-CESZTRKM96');
 </script>
+
+<!-- Google AdSense -->
+<script data-ad-client="ca-pub-8404651063516637" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 <!-- open graph -->
 <meta property="og:type" content="website" />
