--- a/src/template/article/index.ejs
+++ b/src/template/article/index.ejs
@@ -32,6 +32,24 @@
     <%- updates.length ? include('./article_updates.ejs') : null %>
   </article>
   <%- include('./article_action.ejs') %>
+
+  <!-- Google AdSense -->
+  <script
+    async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8404651063516637"
+    crossorigin="anonymous"
+  ></script>
+  <ins class="adsbygoogle"
+    style="display:block"
+    data-ad-client="ca-pub-8404651063516637"
+    data-ad-slot="7746538242"
+    data-ad-format="auto"
+    data-full-width-responsive="true"
+  ></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+
   <%- include('../common/footer.ejs') %>
 
   <script src="/prism.js"></script>
