fix article content overflow

--- a/src/template/article/article_content.ejs
+++ b/src/template/article/article_content.ejs
@@ -47,11 +47,14 @@
 
   article p {
     max-width: var(--content-max-width);
-    padding: 0 30px;
-    font-size: 16px;
+
     margin: 15px auto;
+    padding: 0 30px;
+
+    font-size: 16px;
     line-height: 1.8;
     color: var(--normal-color);
+    word-break: break-word;
   }
 
   article p code, article ul code {
