--- a/src/template/article/article_content.ejs
+++ b/src/template/article/article_content.ejs
@@ -202,7 +202,7 @@
     width: 100%;
     max-width: var(--content-max-width);
     margin: 0 auto;
-    height: 640px;
+    max-height: 640px;
     border: 1px solid var(--tertiary-color);
     border-radius: var(--border-radius);
   }
