css writing modes and logical properties

--- a/src/template/article/article_action.ejs
+++ b/src/template/article/article_action.ejs
@@ -1,13 +1,14 @@
 
 <style>
   .article-actions {
-    max-width: var(--content-max-width);
+    max-inline-size: var(--content-max-width);
 
     display: flex;
     align-items: center;
 
-    margin: 40px auto;
-    padding: 0 30px;
+    margin-block: 40px;
+    margin-inline: auto;
+    padding-inline: 30px;
 
     font-family: common_font;
     color: var(--normal-color);
