--- a/src/template/common/footer.ejs
+++ b/src/template/common/footer.ejs
@@ -1,9 +1,10 @@
 <style>
 .page-footer {
   font-size: 12px;
-  max-width: var(--content-max-width);
-  margin: 40px auto;
-  padding: 0 30px;
+  max-inline-size: var(--content-max-width);
+  margin-block: 40px;
+  margin-inline: auto;
+  padding-inline: 30px;
   font-family: common_font;
   color: var(--secondary-color);
 }
