--- a/src/template/common/global_style.ejs
+++ b/src/template/common/global_style.ejs
@@ -25,4 +25,8 @@
     background-color: var(--backgroud);
     transition: background-color var(--transition-duration);
   }
+
+  figure {
+    margin-inline: 0;
+  }
 </style>
