--- a/src/template/article/article_header.ejs
+++ b/src/template/article/article_header.ejs
@@ -1,8 +1,9 @@
 <style>
 .article-header {
-  max-width: var(--content-max-width);
-  margin: 40px auto;
-  padding: 0 30px;
+  max-inline-size: var(--content-max-width);
+  margin-block: 40px;
+  margin-inline: auto;
+  padding-inline: 30px;
 }
 
 .article-title {
