--- a/src/template/index.ejs
+++ b/src/template/index.ejs
@@ -16,19 +16,20 @@
     }
 
     .article-list {
-      max-width: var(--content-max-width);
-      margin: 40px auto;
-      padding: 0 30px;
+      max-inline-size: var(--content-max-width);
+      margin-block: 40px;
+      margin-inline: auto;
+      padding-inline: 30px;
     }
     .article-item {
       list-style: none;
       display: block;
-      margin: 15px 0;
+      margin-block: 15px;
     }
     .article-title {
       display: inline;
       font-weight: normal;
-      margin: 0 10px 0 0;
+      margin-block-start: 10px;
       padding: 0;
       color: var(--primary-color);
       font-size: 18px;
