--- a/src/template/article/index.ejs
+++ b/src/template/article/index.ejs
@@ -22,7 +22,6 @@
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/firacode@5.2.0/distr/fira_code.min.css" />
   <link rel="stylesheet" href="/prism.css" />
-  <script async defer src="/prism.js"></script>
 </head>
 
 <body>
@@ -57,6 +56,7 @@
   </script>
 
   <%- include('../common/footer.ejs') %>
+  <script src="/prism.js"></script>
 </body>
 
 </html>
