fix build error

--- a/src/template/article/index.ejs
+++ b/src/template/article/index.ejs
@@ -32,7 +32,7 @@
     <%- updates.length ? include('./article_updates.ejs') : null %>
   </article>
   <%- include('./article_action.ejs') %>
-  <%- include('./article_ads.ejss') %>
+  <%- include('./article_ads.ejs') %>
   <%- include('../common/footer.ejs') %>
   <script src="/prism.js"></script>
 </body>
